# c-cmake_demo

./: .gitignore  CMakeLists.txt  TutorialConfig.h.in  notes.txt  todo  tutorial.c
MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.c
